<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="me.host43.locationnotifier.trackpoints.TrackPointsViewModel"/>
        <variable
            name="point"
            type="me.host43.locationnotifier.database.Point" />
        <variable
            name="clickListener"
            type="me.host43.locationnotifier.trackpoints.PointItemListener" />
        <variable
            name="switchClickListener"
            type="me.host43.locationnotifier.trackpoints.PointItemSwitchListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> clickListener.onClick(point)}">

        <TextView
            android:id="@+id/altitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/altitude_label_text"
            app:layout_constraintBottom_toTopOf="@+id/latitude_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/latitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/latitude_label_text"
            app:layout_constraintBottom_toTopOf="@+id/distance_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/altitude_label" />

        <TextView
            android:id="@+id/distance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/distance_label_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/latitude_label" />

        <TextView
            android:id="@+id/latitude_text_view"
            android:text="@{point.latitude}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/altitude_label"
            app:layout_constraintStart_toEndOf="@+id/altitude_label" />

        <TextView
            android:id="@+id/longtitude_text_view"
            android:text="@{point.longitude}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/latitude_label"
            app:layout_constraintStart_toEndOf="@+id/latitude_label" />

        <TextView
            android:id="@+id/distance_text_view"
            android:text="@{point.distance}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/distance_label"
            app:layout_constraintStart_toEndOf="@+id/distance_label" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@{point.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/latitude_text_view" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/onoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/onoff_text"
            android:onClick="@{() -> switchClickListener.onClick(point)}"
            android:checked="@={point.enabled}"
            android:onCheckedChanged="@{() -> vm.updatePoint(point)}"
            app:layout_constraintBottom_toBottomOf="@+id/distance_text_view"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>